--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -61,6 +61,9 @@
                                mnemonicParsing="false"
                                onAction="#toggleStatusBar"
                                text="Toggle Status Bar"/>
+                <SeparatorMenuItem/>
+                <MenuItem onAction="#onSnapShot"
+                          text="Take Snapshot picture of plot"/>
             </Menu>
             <Menu mnemonicParsing="false" text="Star Data">
                 <MenuItem mnemonicParsing="false"
