--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -10,128 +10,167 @@
       fx:controller="com.teamgannon.trips.controller.MainPane">
     <VBox>
         <MenuBar fx:id="menuBar" >
-            <Menu mnemonicParsing="false" text="General">
-                <MenuItem mnemonicParsing="false" onAction="#plotStars" text="Plot Stars"/>
-                <MenuItem mnemonicParsing="false" onAction="#plotRoutes" text="Plot Routes"/>
-                <MenuItem mnemonicParsing="false" onAction="#clearStars" text="Clear Stars"/>
-                <MenuItem mnemonicParsing="false" onAction="#clearRoutes" text="Clear Routes for current dataset"/>
-                <MenuItem mnemonicParsing="false" onAction="#simulate" text="Simulate"/>
+            <Menu mnemonicParsing="false" text="File">
+                <MenuItem mnemonicParsing="false"
+                          onAction="#selectActiveDataset" text="Open Dataset..."/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#saveDataset" text="Save"/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#saveAsDataset" text="Save As (Create new dataset)"/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#exportDataset" text="Export dataset"/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#loadDataSetManager" text="Import dataset"/>
                 <MenuItem mnemonicParsing="false" onAction="#quit" text="Quit"/>
             </Menu>
-            <Menu mnemonicParsing="false" text="Display">
+            <Menu mnemonicParsing="false" text="Edit">
+                <MenuItem mnemonicParsing="false"
+                          onAction="#runQuery" text="Select stars to display from current dataset"/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#findInView" text="Choose a star by name from current selection"/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#findInDataset" text="Choose a star by name from entire dataset"/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#editStar" text="Edit star data"/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#showApplicationPreferences"
-                          text="Change Application Preferences..."/>
-                <SeparatorMenuItem/>
-                <CheckMenuItem fx:id="togglePolitiesMenuitem"
+                          text="Preferences"/>
+            </Menu>
+            <Menu mnemonicParsing="false" text="View">
+                <MenuItem mnemonicParsing="false" onAction="#plotStars" text="Plot Stars"/>
+                <Menu mnemonicParsing="false" text="Toggle on-screen display of...">
+                    <CheckMenuItem fx:id="toggleGridMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#toggleGrid"
+                                   text="Grid"/>
+                    <CheckMenuItem fx:id="toggleExtensionsMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#toggleGridExtensions"
+                                   text="Extensions (Z-axis legs)"/>
+                    <CheckMenuItem fx:id="toggleLabelsMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#toggleLabels"
+                                   text="Star names"/>
+                    <CheckMenuItem fx:id="toggleScaleMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#toggleScale"
+                                   text="Scale numbers (Grid block size)"/>
+                    <CheckMenuItem fx:id="togglePolitiesMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#togglePolities"
+                                   text="Polities"/>
+                    <CheckMenuItem fx:id="toggleStarMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#toggleStars"
+                                   text="Stars"/>
+                    <CheckMenuItem fx:id="toggleTransitsMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#toggleTransitAction"
+                                   selected="true"
+                                   text="Links"/>
+                    <CheckMenuItem fx:id="toggleTransitLengthsMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#toggleTransitLengths"
+                                   selected="true"
+                                   text="Link Lengths"/>
+                    <CheckMenuItem fx:id="toggleRoutesMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#toggleRoutes"
+                                   text="Routes"/>
+                    <CheckMenuItem fx:id="toggleRouteLengthsMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#toggleRouteLengths"
+                                   text="Route Lengths"/>
+                    <CheckMenuItem fx:id="toggleSidePaneMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#toggleSidePane"
+                                   text="Side Pane"/>
+                    <CheckMenuItem fx:id="toggleToolBarMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#toggleToolbar"
+                                   text="Button bar"/>
+                    <CheckMenuItem fx:id="toggleStatusBarMenuitem"
+                                   mnemonicParsing="false"
+                                   onAction="#toggleStatusBar"
+                                   text="Status Bar"/>
+                </Menu>
+                <MenuItem fx:id="showRoutesMenuitem"
                                mnemonicParsing="false"
-                               onAction="#togglePolities"
-                               text="Toggle Polities"/>
-                <SeparatorMenuItem/>
-                <CheckMenuItem fx:id="toggleGridMenuitem"
-                               mnemonicParsing="false"
-                               onAction="#toggleGrid"
-                               text="Toggle Grid"/>
-                <CheckMenuItem fx:id="toggleLabelsMenuitem"
-                               mnemonicParsing="false"
-                               onAction="#toggleLabels"
-                               text="Toggle Labels"/>
-                <CheckMenuItem fx:id="toggleExtensionsMenuitem"
-                               mnemonicParsing="false"
-                               onAction="#toggleGridExtensions"
-                               text="Toggle Grid Extensions"/>
-                <CheckMenuItem fx:id="toggleStarMenuitem"
-                               mnemonicParsing="false"
-                               onAction="#toggleStars"
-                               text="Toggle Stars"/>
-                <CheckMenuItem fx:id="toggleScaleMenuitem"
-                               mnemonicParsing="false"
-                               onAction="#toggleScale"
-                               text="Toggle Scale"/>
-                <SeparatorMenuItem/>
-                <CheckMenuItem fx:id="toggleSidePaneMenuitem"
-                               mnemonicParsing="false"
-                               onAction="#toggleSidePane"
-                               text="Toggle Side Pane"/>
-                <CheckMenuItem fx:id="toggleToolBarMenuitem"
-                               mnemonicParsing="false"
-                               onAction="#toggleToolbar"
-                               text="Toggle Toolbar"/>
-                <CheckMenuItem fx:id="toggleStatusBarMenuitem"
-                               mnemonicParsing="false"
-                               onAction="#toggleStatusBar"
-                               text="Toggle Status Bar"/>
+                               onAction="#showRoutes"
+                               text="Show routes in side pane"/>
                 <SeparatorMenuItem/>
                 <MenuItem onAction="#onSnapShot"
                           text="Take Snapshot picture of plot"/>
             </Menu>
-            <Menu mnemonicParsing="false" text="Star Data">
-                <MenuItem mnemonicParsing="false"
-                          onAction="#selectActiveDataset" text="Select Active Dataset..."/>
-                <MenuItem mnemonicParsing="false"
-                          onAction="#runQuery" text="Select stars from current dataset..."/>
-                <MenuItem mnemonicParsing="false"
-                          onAction="#plotStars" text="Plot Stars"/>
-                <MenuItem mnemonicParsing="false"
-                          onAction="#viewEditStarData" text="View/Edit selected Star Data"/>
-                <SeparatorMenuItem/>
-                <MenuItem mnemonicParsing="false"
-                          onAction="#loadDataSetManager" text="Import dataset from a file..."/>
+            <Menu mnemonicParsing="false" text="Tools">
+                <Menu mnemonicParsing="false" text="Route">
+                    <MenuItem mnemonicParsing="false"
+                              onAction="#routeFinderInView" text="Route finder using currently selected stars"/>
+                    <MenuItem mnemonicParsing="false"
+                              onAction="#routeFinderDataset"
+                              text="Route finder using entire dataset"/>
+                    <MenuItem mnemonicParsing="false"
+                              onAction="#clickRoutes"
+                              text="Create route by clicking on stars"/>
+                    <MenuItem mnemonicParsing="false"
+                              onAction="#editDeleteRoutes"
+                              text="Edit of delete Route information"/>
+                    <MenuItem mnemonicParsing="false" onAction="#clearRoutes"
+                              text="Delete all routes"/>
+
+                </Menu>
+                <Menu mnemonicParsing="false" text="Links">
+                    <MenuItem mnemonicParsing="false"
+                              onAction="#transitFinder"
+                              text="Find links between stars by distance"/>
+                    <MenuItem mnemonicParsing="false"
+                              onAction="#clearTransits"
+                              text="Clear existing links"/>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Search for / Select stars">
+                    <MenuItem mnemonicParsing="false"
+                              onAction="#runQuery" text="Select stars to display from current dataset"/>
+                    <MenuItem mnemonicParsing="false"
+                              onAction="#advancedSearch" text="Select stars using advanced search.."/>
+                </Menu>
             </Menu>
-            <Menu mnemonicParsing="false" text="Transits">
-                <MenuItem mnemonicParsing="false"
-                          onAction="#transitFinder"
-                          text="Find Transits Between Stars..."/>
-                <CheckMenuItem fx:id="toggleTransitsMenuitem"
-                               mnemonicParsing="false"
-                               onAction="#toggleTransitAction"
-                               selected="true"
-                               text="Toggle Transits"/>
-                <CheckMenuItem fx:id="toggleTransitLengthsMenuitem"
-                               mnemonicParsing="false"
-                               onAction="#toggleTransitLengths"
-                               selected="true"
-                               text="Toggle Transit Lengths"/>
-                <MenuItem mnemonicParsing="false"
-                          onAction="#clearTransits"
-                          text="Clear Transits"/>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Routing">
-                <MenuItem mnemonicParsing="false"
-                          onAction="#routeFinderInView" text="Route finder from A to B (in View)"/>
-                <MenuItem mnemonicParsing="false"
-                          onAction="#routeFinderDataset" text="Route finder from A to B (Entire Dataset)"/>
-                <SeparatorMenuItem/>
-                <CheckMenuItem fx:id="toggleRoutesMenuitem"
-                               mnemonicParsing="false"
-                               onAction="#toggleRoutes"
-                               text="Toggle Routes"/>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Search">
-                <MenuItem mnemonicParsing="false"
-                          onAction="#findInView" text="Select star in view..."/>
-                <MenuItem mnemonicParsing="false"
-                          onAction="#findInDataset" text="Find star(s) in dataset..."/>
-                <MenuItem mnemonicParsing="false"
-                          onAction="#advancedSearch" text="Select stars using advanced search.."/>
-            </Menu>
+
             <Menu mnemonicParsing="false" text="Reports">
                 <MenuItem mnemonicParsing="false"
-                          onAction="#distanceReport" text="Distance .."/>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Expert (dev)">
-                <MenuItem mnemonicParsing="false" onAction="#rotate" text="Rotation Angles"/>
+                          onAction="#distanceReport"
+                          text="Distance .."/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#routeListReport"
+                          text="Route List"/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#starPropertyReport"
+                          text="Star Property Report"/>
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
                 <MenuItem mnemonicParsing="false"
-                          onAction="#aboutTrips" text="About TRIPS"/>
-                <CheckMenuItem mnemonicParsing="false"
-                               onAction="#toggleHelpMode" text="Toggle help mode"/>
+                          onAction="#aboutTrips"
+                          text="About TRIPS"/>
                 <MenuItem mnemonicParsing="false"
-                          onAction="#howToSupport" text="How to get support"/>
+                          onAction="#howToSupport"
+                          text="How to get support"/>
                 <MenuItem mnemonicParsing="false"
-                          onAction="#checkUpdate" text="Check for update"/>
+                          onAction="#checkUpdate"
+                          text="Check for update"/>
             </Menu>
+
+
+            <Menu mnemonicParsing="false" text="Leftover" disable="true">
+                <MenuItem mnemonicParsing="false" onAction="#plotRoutes" text="Plot Routes"/>
+                <MenuItem mnemonicParsing="false" onAction="#clearStars" text="Clear Stars"/>
+                <MenuItem mnemonicParsing="false" onAction="#simulate" text="Simulate"/>
+                <SeparatorMenuItem/>
+                <MenuItem mnemonicParsing="false"
+                          onAction="#viewEditStarData" text="View/Edit selected Star Data"/>
+                <SeparatorMenuItem/>
+                <MenuItem mnemonicParsing="false" onAction="#rotate" text="Rotation Angles"/>
+            </Menu>
+
+
         </MenuBar>
         <ToolBar fx:id="toolBar" minHeight="40" prefHeight="40">
             <Button fx:id="plotButton" mnemonicParsing="false"
