--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -267,7 +267,11 @@
             <Button fx:id="plotButton"
                     mnemonicParsing="false"
                     onAction="#plotStars"
-                    text="Plot Stars"/>
+                    text="Plot Stars">
+                <tooltip>
+                    <Tooltip text="Select Dataset to enable plot"/>
+                </tooltip>
+            </Button>
             <Separator/>
             <Label text="Toggle Display on/off  "/>
             <Separator/>
@@ -275,56 +279,100 @@
                           mnemonicParsing="false"
                           textFill="dodgerblue"
                           onAction="#toggleLabels"
-                          text="Star Labels"/>
+                          text="Star Labels">
+                <tooltip>
+                    <Tooltip text="toggle star labels"/>
+                </tooltip>
+            </ToggleButton>
             <ToggleButton fx:id="togglePolityBtn"
                           mnemonicParsing="false"
                           textFill="dodgerblue"
                           onAction="#togglePolities"
-                          text="Star Polities"/>
+                          text="Star Polities">
+                <tooltip>
+                    <Tooltip text="toggle star polities"/>
+                </tooltip>
+            </ToggleButton>
             <ToggleButton fx:id="toggleRoutesBtn"
                           mnemonicParsing="false"
                           textFill="dodgerblue"
                           onAction="#toggleRoutes"
-                          text="Routes"/>
+                          text="Routes">
+                <tooltip>
+                    <Tooltip text="toggle routes"/>
+                </tooltip>
+            </ToggleButton>
             <ToggleButton fx:id="toggleTransitsBtn"
                           mnemonicParsing="false"
                           textFill="dodgerblue"
                           onAction="#toggleTransitAction"
-                          text="Links"/>
+                          text="Links">
+                <tooltip>
+                    <Tooltip text="toggle links"/>
+                </tooltip>
+            </ToggleButton>
             <Separator/>
             <ToggleButton fx:id="toggleStarBtn"
                           mnemonicParsing="false"
                           textFill="blueviolet"
                           onAction="#toggleStars"
-                          text="Stars"/>
+                          text="Stars">
+                <tooltip>
+                    <Tooltip text="toggle stars"/>
+                </tooltip>
+            </ToggleButton>
             <ToggleButton fx:id="toggleGridBtn"
                           mnemonicParsing="false"
                           textFill="blueviolet"
                           onAction="#toggleGrid"
-                          text="Grid"/>
+                          text="Grid">
+                <tooltip>
+                    <Tooltip text="toggle grid"/>
+                </tooltip>
+            </ToggleButton>
             <ToggleButton fx:id="toggleStemBtn"
                           mnemonicParsing="false"
                           textFill="blueviolet"
                           onAction="#toggleGridExtensions"
-                          text="Extensions"/>
+                          text="Extensions">
+                <tooltip>
+                    <Tooltip text="toggle stems to stars from grid"/>
+                </tooltip>
+            </ToggleButton>
             <ToggleButton fx:id="toggleScaleBtn"
                           mnemonicParsing="false"
                           textFill="blueviolet"
                           onAction="#toggleScale"
-                          text="Scale"/>
+                          text="Scale">
+                <tooltip>
+                    <Tooltip text="toggle scale"/>
+                </tooltip>
+            </ToggleButton>
             <Separator/>
             <ToggleButton fx:id="toggleSettings"
                           mnemonicParsing="false"
                           onAction="#toggleSidePane"
-                          text="Side Pane"/>
+                          text="Side Pane">
+                <tooltip>
+                    <Tooltip text="toggle side panel"/>
+                </tooltip>
+            </ToggleButton>
             <ToggleButton fx:id="toggleZoomInBtn"
                           mnemonicParsing="false"
                           onAction="#zoomIn"
-                          text="+"/>
+                          text="+">
+                <tooltip>
+                    <Tooltip text="zoom in"/>
+                </tooltip>
+            </ToggleButton>
             <ToggleButton fx:id="toggleZoomOutBtn"
                           mnemonicParsing="false"
                           onAction="#zoomOut"
-                          text="-"/>
+                          text="-">
+                <tooltip>
+                    <Tooltip text="zoom out"/>
+                </tooltip>
+            </ToggleButton>
         </ToolBar>
         <VBox fx:id="displayPane"/> <!-- all the magic happens here -->
         <HBox fx:id="statusBar"
