--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -56,6 +56,10 @@
                           text="Choose a star by name from entire dataset"/>
                 <SeparatorMenuItem/>
                 <MenuItem mnemonicParsing="false"
+                          onAction="#findInSesame"
+                          text="lookup a name in the Sesame Name Resolver"/>
+                <SeparatorMenuItem/>
+                <MenuItem mnemonicParsing="false"
                           onAction="#editStar"
                           text="Edit star data"/>
                 <MenuItem mnemonicParsing="false"
