--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -37,31 +37,31 @@
                   text="Edit">
                 <MenuItem mnemonicParsing="false"
                           onAction="#runQuery"
-                          text="Select stars to display from current dataset"/>
+                          text="Select starPositionDescriptors to display from current dataset"/>
                 <SeparatorMenuItem/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#findInView"
-                          text="Choose a star by name from current selection"/>
+                          text="Choose a starPositionDescriptor by name from current selection"/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#findByCatalogId"
-                          text="Choose a star by by catalog Id"/>
+                          text="Choose a starPositionDescriptor by by catalog Id"/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#findByConstellation"
-                          text="Retrieve all stars by constellation"/>
+                          text="Retrieve all starPositionDescriptors by constellation"/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#findByCommonName"
-                          text="Choose a star by by common name"/>
+                          text="Choose a starPositionDescriptor by by common name"/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#findInDataset"
-                          text="Choose a star by name from entire dataset"/>
+                          text="Choose a starPositionDescriptor by name from entire dataset"/>
                 <SeparatorMenuItem/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#findRelatedStars"
-                          text="Get a list of all stars related to a requested star from a specified distance in ly"/>
+                          text="Get a list of all starPositionDescriptors related to a requested starPositionDescriptor from a specified distance in ly"/>
                 <SeparatorMenuItem/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#editStar"
-                          text="Edit star data"/>
+                          text="Edit starPositionDescriptor data"/>
                 <MenuItem mnemonicParsing="false"
                           onAction="#showApplicationPreferences"
                           text="Preferences"/>
@@ -142,13 +142,13 @@
                       text="Route">
                     <MenuItem mnemonicParsing="false"
                               onAction="#routeFinderInView"
-                              text="Route finder using currently selected stars"/>
+                              text="Route finder using currently selected starPositionDescriptors"/>
                     <MenuItem mnemonicParsing="false"
                               onAction="#routeFinderDataset"
                               text="Route finder using entire dataset"/>
                     <MenuItem mnemonicParsing="false"
                               onAction="#clickRoutes"
-                              text="Create route by clicking on stars"/>
+                              text="Create route by clicking on starPositionDescriptors"/>
                     <MenuItem mnemonicParsing="false"
                               onAction="#editDeleteRoutes"
                               text="Edit or delete Route information"/>
@@ -160,19 +160,19 @@
                       text="Links">
                     <MenuItem mnemonicParsing="false"
                               onAction="#transitFinder"
-                              text="Find links between stars by distance"/>
+                              text="Find links between starPositionDescriptors by distance"/>
                     <MenuItem mnemonicParsing="false"
                               onAction="#clearTransits"
                               text="Clear existing links"/>
                 </Menu>
                 <Menu mnemonicParsing="false"
-                      text="Search for / Select stars">
+                      text="Search for / Select starPositionDescriptors">
                     <MenuItem mnemonicParsing="false"
                               onAction="#runQuery"
-                              text="Select stars to display from current dataset"/>
+                              text="Select starPositionDescriptors to display from current dataset"/>
                     <MenuItem mnemonicParsing="false"
                               onAction="#advancedSearch"
-                              text="Select stars using advanced search.."/>
+                              text="Select starPositionDescriptors using advanced search.."/>
                 </Menu>
             </Menu>
             <Menu mnemonicParsing="false"
@@ -295,7 +295,7 @@
                           onAction="#toggleLabels"
                           text="Star Labels">
                 <tooltip>
-                    <Tooltip text="toggle star labels"/>
+                    <Tooltip text="toggle starPositionDescriptor labels"/>
                 </tooltip>
             </ToggleButton>
             <ToggleButton fx:id="togglePolityBtn"
@@ -304,7 +304,7 @@
                           onAction="#togglePolities"
                           text="Star Polities">
                 <tooltip>
-                    <Tooltip text="toggle star polities"/>
+                    <Tooltip text="toggle starPositionDescriptor polities"/>
                 </tooltip>
             </ToggleButton>
             <ToggleButton fx:id="toggleRoutesBtn"
@@ -332,7 +332,7 @@
                           onAction="#toggleStars"
                           text="Stars">
                 <tooltip>
-                    <Tooltip text="toggle stars"/>
+                    <Tooltip text="toggle starPositionDescriptors"/>
                 </tooltip>
             </ToggleButton>
             <ToggleButton fx:id="toggleGridBtn"
@@ -350,7 +350,7 @@
                           onAction="#toggleGridExtensions"
                           text="Extensions">
                 <tooltip>
-                    <Tooltip text="toggle stems to stars from grid"/>
+                    <Tooltip text="toggle stems to starPositionDescriptors from grid"/>
                 </tooltip>
             </ToggleButton>
             <ToggleButton fx:id="toggleScaleBtn"
