created toolbar and menubar controllers, fixed side panel and added resize correctly

--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -65,63 +65,7 @@
                 <MenuItem mnemonicParsing="false"
                           onAction="#plotStars"
                           text="Plot Stars"/>
-                <Menu mnemonicParsing="false"
-                      text="Toggle on-screen display of...">
-                    <CheckMenuItem fx:id="toggleGridMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#toggleGrid"
-                                   text="Grid"/>
-                    <CheckMenuItem fx:id="toggleExtensionsMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#toggleGridExtensions"
-                                   text="Extensions (Z-axis legs)"/>
-                    <CheckMenuItem fx:id="toggleLabelsMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#toggleLabels"
-                                   text="Star names"/>
-                    <CheckMenuItem fx:id="toggleScaleMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#toggleScale"
-                                   text="Scale numbers (Grid block size)"/>
-                    <CheckMenuItem fx:id="togglePolitiesMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#togglePolities"
-                                   text="Polities"/>
-                    <CheckMenuItem fx:id="toggleStarMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#toggleStars"
-                                   text="Stars"/>
-                    <CheckMenuItem fx:id="toggleTransitsMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#toggleTransitAction"
-                                   selected="true"
-                                   text="Links"/>
-                    <CheckMenuItem fx:id="toggleTransitLengthsMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#toggleTransitLengths"
-                                   selected="true"
-                                   text="Link Lengths"/>
-                    <CheckMenuItem fx:id="toggleRoutesMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#toggleRoutes"
-                                   text="Routes"/>
-                    <CheckMenuItem fx:id="toggleRouteLengthsMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#toggleRouteLengths"
-                                   text="Route Lengths"/>
-                    <CheckMenuItem fx:id="toggleSidePaneMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#toggleSidePane"
-                                   text="Side Pane"/>
-                    <CheckMenuItem fx:id="toggleToolBarMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#toggleToolbar"
-                                   text="Button bar"/>
-                    <CheckMenuItem fx:id="toggleStatusBarMenuitem"
-                                   mnemonicParsing="false"
-                                   onAction="#toggleStatusBar"
-                                   text="Status Bar"/>
-                </Menu>
+                <fx:include source="menuBar/ToggleDisplayMenu.fxml"/>
                 <MenuItem fx:id="showRoutesMenuitem"
                           mnemonicParsing="false"
                           onAction="#showRoutes"
@@ -270,119 +214,7 @@
             <!--                          text="Rotation Angles"/>-->
             <!--            </Menu>-->
         </MenuBar>
-        <ToolBar fx:id="toolBar"
-                 minHeight="40"
-                 prefHeight="40">
-            <Button fx:id="plotButton"
-                    mnemonicParsing="false"
-                    onAction="#plotStars"
-                    text="Plot Stars">
-                <tooltip>
-                    <Tooltip text="Select Dataset to enable plot"/>
-                </tooltip>
-            </Button>
-            <Separator/>
-            <Label text="Toggle Display on/off  "/>
-            <Separator/>
-            <ToggleButton fx:id="toggleLabelsBtn"
-                          mnemonicParsing="false"
-                          textFill="dodgerblue"
-                          onAction="#toggleLabels"
-                          text="Star Labels">
-                <tooltip>
-                    <Tooltip text="toggle starPositionDescriptor labels"/>
-                </tooltip>
-            </ToggleButton>
-            <ToggleButton fx:id="togglePolityBtn"
-                          mnemonicParsing="false"
-                          textFill="dodgerblue"
-                          onAction="#togglePolities"
-                          text="Star Polities">
-                <tooltip>
-                    <Tooltip text="toggle starPositionDescriptor polities"/>
-                </tooltip>
-            </ToggleButton>
-            <ToggleButton fx:id="toggleRoutesBtn"
-                          mnemonicParsing="false"
-                          textFill="dodgerblue"
-                          onAction="#toggleRoutes"
-                          text="Routes">
-                <tooltip>
-                    <Tooltip text="toggle routes"/>
-                </tooltip>
-            </ToggleButton>
-            <ToggleButton fx:id="toggleTransitsBtn"
-                          mnemonicParsing="false"
-                          textFill="dodgerblue"
-                          onAction="#toggleTransitAction"
-                          text="Links">
-                <tooltip>
-                    <Tooltip text="toggle links"/>
-                </tooltip>
-            </ToggleButton>
-            <Separator/>
-            <ToggleButton fx:id="toggleStarBtn"
-                          mnemonicParsing="false"
-                          textFill="blueviolet"
-                          onAction="#toggleStars"
-                          text="Stars">
-                <tooltip>
-                    <Tooltip text="toggle starPositionDescriptors"/>
-                </tooltip>
-            </ToggleButton>
-            <ToggleButton fx:id="toggleGridBtn"
-                          mnemonicParsing="false"
-                          textFill="blueviolet"
-                          onAction="#toggleGrid"
-                          text="Grid">
-                <tooltip>
-                    <Tooltip text="toggle grid"/>
-                </tooltip>
-            </ToggleButton>
-            <ToggleButton fx:id="toggleStemBtn"
-                          mnemonicParsing="false"
-                          textFill="blueviolet"
-                          onAction="#toggleGridExtensions"
-                          text="Extensions">
-                <tooltip>
-                    <Tooltip text="toggle stems to starPositionDescriptors from grid"/>
-                </tooltip>
-            </ToggleButton>
-            <ToggleButton fx:id="toggleScaleBtn"
-                          mnemonicParsing="false"
-                          textFill="blueviolet"
-                          onAction="#toggleScale"
-                          text="Scale">
-                <tooltip>
-                    <Tooltip text="toggle scale"/>
-                </tooltip>
-            </ToggleButton>
-            <Separator/>
-            <ToggleButton fx:id="toggleSettings"
-                          mnemonicParsing="false"
-                          onAction="#toggleSidePane"
-                          text="Side Pane">
-                <tooltip>
-                    <Tooltip text="toggle side panel"/>
-                </tooltip>
-            </ToggleButton>
-            <ToggleButton fx:id="toggleZoomInBtn"
-                          mnemonicParsing="false"
-                          onAction="#zoomIn"
-                          text="+">
-                <tooltip>
-                    <Tooltip text="zoom in"/>
-                </tooltip>
-            </ToggleButton>
-            <ToggleButton fx:id="toggleZoomOutBtn"
-                          mnemonicParsing="false"
-                          onAction="#zoomOut"
-                          text="-">
-                <tooltip>
-                    <Tooltip text="zoom out"/>
-                </tooltip>
-            </ToggleButton>
-        </ToolBar>
+        <fx:include source="toolbar/toolbar.fxml"/>
         <VBox fx:id="displayPane"/> <!-- all the magic happens here -->
         <fx:include source="statusBar/StatusBar.fxml" fx:id="statusBar"/>
     </VBox>
