--- a/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
+++ b/tripsapplication/src/main/resources/com/teamgannon/trips/controller/MainPane.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.StackPane?>
 <Pane xmlns:fx="http://javafx.com/fxml/1"
       fx:id="mainPanel"
       xmlns="http://javafx.com/fxml"
@@ -215,7 +216,7 @@
             <!--            </Menu>-->
         </MenuBar>
         <fx:include source="toolbar/toolbar.fxml"/>
-        <VBox fx:id="displayPane"/> <!-- all the magic happens here -->
+        <StackPane fx:id="displayPane"/> <!-- all the magic happens here -->
         <fx:include source="statusBar/StatusBar.fxml" fx:id="statusBar"/>
     </VBox>
 </Pane>
